--- a/Asp.MVCCoreWeb.csproj
+++ b/Asp.MVCCoreWeb.csproj
@@ -20,6 +20,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.101.85" />
     <PackageReference Include="GitForWindows" Version="2.23.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
